k8s-manifests/storedog-app/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storedog-ingress
  namespace: storedog
spec:
  ingressClassName: nginx
  # All traffic that doesn't match a more specific rule below will
  # be sent to our central nginx reverse proxy.
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
    - http:
        paths:
          # This rule directs all traffic (path: /) to the nginx service.
          # The nginx service will then use its internal configuration
          # to route requests to the appropriate backend service.
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
